--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,5 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Distributed System"
-    url: /distributed-systems/
+  - title: "Categories"
+    url: /categories/
