added an avatar

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name             : "Chae Rim Kim"
-  avatar           : #
+  avatar           : ![crk copy](https://user-images.githubusercontent.com/33334078/75441242-37b62e80-5955-11ea-9015-673b267a1dea.JPG)
   bio              : "Computer Science Portfolio"
   location         : "Leeds, United Kingdom"
   email            :
