--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title                    : "Chae Rim Kim"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chae Rim Kim"
-description              : "Computer Scientist at the University of Leeds"
+description              : "Computer Science graduate at the University of Leeds"
 url                      : "https://github.com/chaerim-kim/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -105,7 +105,7 @@ analytics:
 author:
   name             : "Chae Rim Kim"
   avatar           : /images/crk_avatar.JPG
-  bio              : "A third year Computer Science student at the University of Leeds"
+  bio              : "A Computer Science graduate at the University of Leeds"
   location         : "Leeds, United Kingdom"
   email            :
   links:
