--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   name             : "Chae Rim Kim"
   avatar           : /images/crk_avatar.JPG
   bio              : "Computer Science graduate from the University of Leeds"
-  location         : "Seoul, South Korea and Leeds, England"
+  location         : "Seoul, South Korea"
   email            :
   links:
     - label: "Email"
@@ -276,13 +276,25 @@ compress_html:
 
 # Defaults
 defaults:
+  # sidebar
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        title: "Categories"
+        nav: "docs"
+
   # _posts
   - scope:
       path: ""
       type: posts
     values:
+      sidebar:
+        title: "Categories"
+        nav: "docs"
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: false
@@ -295,6 +307,9 @@ defaults:
       path: ""
       type: pages
     values:
+      sidebar:
+        title: "Categories"
+        nav: "docs"
       layout: single
       author_profile: true
       read_time: false
