Add project section

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chae Rim Kim"
+title                    : "ChaeRim-Kim.io"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chae Rim Kim"
