--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,55 +25,50 @@ main:
   - title: Study
     sublinks:
       - title: "Distributed Systems"
-        url: /distributed%20systems/DS-0TOC/
+        url: /distributed-systems/
       - title: "Recommender Systems"
-        url: /recommender%20systems/RS-0TOC/
+        url: /recommender-systems/
       - title: "Secure Computing"
-        url: /secure%20computing/SC-0TOC/
+        url: /secure-computing/
       - title: "Machine Learning"
-        url: /machine%20learning/ML-0TOC/
+        url: /machine-learning/
 
   - title: Data Structures and Algorithms
     sublinks:
       - title: "Interview Preparation"
-        url: /categories/#interview-preparation
+        url: /intv-prep/
       - title: "HackerRank Coding Challenges"
         url: /hackerrank/HackerRank/
 
   - title: ETC
     sublinks:
       - title: CS Papers
-        url: /categories/#cs-papers/
+        url: /cs-papers/
       - title: Daily Tech News
-        url: /daily%20tech%20news/News-about/
+        url: /tech-news/
 
   - title: "Categories"
     url: /categories/
+
+
+
 
 # the sidebar menu
 docs:
   - title: Projects
     url: /projects/
   - title: Study
-    children:
-      - title: "Distributed Systems"
-        url: /distributed%20systems/DS-0TOC/
-      - title: "Recommender Systems"
-        url: /recommender%20systems/RS-0TOC/
-      - title: "Secure Computing"
-        url: /secure%20computing/SC-0TOC/
-      - title: "Machine Learning"
-        url: /machine%20learning/ML-0TOC/
+    url: /study/
 
   - title: Data Structures and Algorithms
     children:
       - title: "Interview Preparation"
-        url: /categories/#interview-preparation
+        url: /intv-prep/
       - title: "HackerRank Coding Challenges"
         url: /hackerrank/HackerRank/
 
   - title: CS Papers
-    url: /categories/#cs-papers/
+    url: /cs-papers/
 
   - title: Daily Tech News
-    url: /daily%20tech%20news/News-about/
+    url: /tech-news/
