Fix permalink to appear on navbar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
       - title: "Edge Computing"
         url: /projects/edge-computing/
       - title: "UniCycle"
-        url: /projects/Unicycle/
+        url: /projects/unicycle/
       - title: "Leeds Inspired Search"
         url: /projects/leeds-inspired/
       - title: "User Management System"
