--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Chae Rim Kim"
-  avatar           : /images/crk_avatar.JPG
+  avatar           : /assets/images/crk_avatar.JPG
   bio              : "Computer Science graduate from the University of Leeds"
   location         : "Seoul, South Korea"
   email            :
