Allow for search across the site

--- a/_config.yml
+++ b/_config.yml
@@ -312,7 +312,7 @@ defaults:
         nav: "docs"
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       comments: false
       share: false
       related: false
