--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chae Rim Kim"
 description              : " "
-url                      : "https://github.com/chaerim-kim/"
+url                      : "https://github.com/chaerim-kim"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
