Rename the navbar title

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,7 +34,7 @@ main:
         url: /machine-learning/
 
 
-  - title: Current Interests
+  - title: Interests
     sublinks:
       - title: CS Papers
         url: /cs-papers/
