--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,18 +50,18 @@ main:
 
 
 # the sidebar menu
-docs:
-  - title: Projects
-    url: /projects/
-
-  - title: Study Notes
-    url: /study/
-
-  - title: Data Structures and Algorithms
-    url: /data-structres-and-algorithms/
-
-  - title: CS Papers
-    url: /cs-papers/
-
-  - title: Daily Tech News
-    url: /tech-news/
+# docs:
+#   - title: Projects
+#     url: /projects/
+#
+#   - title: Study Notes
+#     url: /study/
+#
+#   - title: Data Structures and Algorithms
+#     url: /data-structres-and-algorithms/
+#
+#   - title: CS Papers
+#     url: /cs-papers/
+#
+#   - title: Daily Tech News
+#     url: /tech-news/
