--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google"
   google:
-    tracking_id          :
+    tracking_id          : G-0JHM0RXNSG
     anonymize_ip         : # true, false (default)
 
 # Site Author
