--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,8 +38,8 @@ main:
     sublinks:
       - title: Daily Tech News
         url: /tech-news/
-      - title: CS Papers
-        url: /cs-papers/
+      - title: IT Trends
+        url: /it-trends/
       - title: Jekyll Blog
         url: /jekyll-blog/
       - title: Other
