Revert "Rename category name to incorporate wider topics"
This reverts commit e18f6f95041c08a3c825553b18febac8ec4656b7.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,8 +38,8 @@ main:
     sublinks:
       - title: Daily Tech News
         url: /tech-news/
-      - title: IT Trends
-        url: /it-trends/
+      - title: CS Papers
+        url: /cs-papers/
       - title: Jekyll Blog
         url: /jekyll-blog/
       - title: Other
