Removed infra tab on the navi bar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,10 +19,10 @@ main:
       - title: Convolutional Neural Network
         url: /projects/Convolutional-Neural-Network/
 
-  - title: Infrastructure
-    sublinks:
-      - title: Information Storage Management (ISM)
-        url: /information-storage-management/
+  # - title: Infrastructure
+  #   sublinks:
+  #     - title: Information Storage Management (ISM)
+  #       url: /information-storage-management/
 
   - title: Study Notes
     sublinks:
